@@ -119,6 +119,8 @@ Release @version@-@release@ Start 02/01/2024 End XX/XX/XXXX
 63. smtpd.c: sanitized variable names for badmailfrom, badrcptto,
     blackholedrcpt, blackholedsender, spamignore 
 64. removed blachole*pattern, spamignorepattern
+- 28/02/2024
+65. qscheduler.c: removed unreachable statement after _exit()
 
 * Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
 Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
